til/2020.01/w1-1-52-week.md
# W1, 1/52 WEEK



## 2021년 1월 W1

새해부턴 일일회고 대신 주간회고를 해보려한다.

### 입사

월요일에 채널코퍼레이션에 프론트엔드 엔지니어로 합류하게됐다. 나를 시작으로 이번에 처음으로 온보딩 세션이 도입됐다고 한다. 굉장히 좋은 경험이었고, 내가 귀한 인재가 된 거처럼 대접받는 기분이었다. 구성원분들이 모두 친절하게 대해주셔서 큰 걱정없이 한 주를 보낼 수 있었다.

처음 경험하는 것들의 연속이라 스스로가 조금 움츠러들었었다. 주변 모든 사람들이 전부 다 대단해보인다. 내가 잘 할 수 있을까? 라는 생각. 다음주부턴 좀 더 자신감있게 행동하려고 한다. 가슴 한편에 무거운 불안감이 짓누르고 있긴 한데\(나는 돈을 받으면서 프로그래밍을 하고 있다는 생각\), 너무 심해서 나를 좀먹는 정도가 아니면 어느정도는 긍정적인 감정이라고 생각한다.

나는 신입이니 퍼포먼스를 당장 낼 수는 없지. 라고 생각하며 걱정을 어느정도 내려놓아야겠지만, 그렇다고 퍼포먼스를 내야돼 라는 압박감은 스스로 어느정도 가져야한다... 이 조율을 어떻게 잘 하느냐가 관건이다.

### 그 외

* 아날로그 다이어리 작성을 시작했다. 평일에는 어느정도 시간 작성이 되는데, 주말엔 형편없었다. 아직 시간 기록까진 되는데 어떻게 시간을 분석하고, 개선해나가야할지 감이 잡히지 않는다. 우선 한달정도 기록만 꾸준히 해도 뭔가 패턴이 보이고, 낭비되는 시간이 보이겠지. 라고 믿고 우선 꾸준히 기록하는 걸 목표로 삼으려고 한다.
* 운동을 거의 안했다. 안했다고 해야할지 못했다고 해야할지... 집에 오면 밥먹고, 씻고 거의 뻗어버려서 운동을 해야겠다는 생각조차 못했다. 의도적으로 해야하는데 어떤 방식으로 해야 좋을지 계속 고민중이다. 너무 진이 다 빠져버린 저녁에 운동을 해버리면 운동이 제대로 진행이 안돼서 어느 시간에 운동을 해야할 지도 고민중.
* 다음 주 회고부턴 기술적인 부분도 넣어야겠다. 어떻게 주간 회고를 구성해야할지 고민해봐야겠음.

### 링크

* [ES6 제너레이터](https://meetup.toast.com/posts/73)
* [리덕스 사가 한글 공식 문서](https://mskims.github.io/redux-saga-in-korean/)
* [리덕스 사가 테스트](https://nukeguys.github.io/dev/redux-saga-test/)
* [리덕스 사가 TOAST](https://meetup.toast.com/posts/136)
* [TypeScript에서 Immutable.js 쓰기](https://blog.martinwork.co.kr/typescript/2019/01/06/apply-immutablejs-with-typescript.html)

