til/2021.01/w1-1-52-week.md
---
description: 2021년 1월 W1 (1/4 ~ 1/10)
---

# W1, 1/52 WEEK

새해부턴 일일회고 대신 주간회고를 해보려한다.

### 입사

월요일에 채널코퍼레이션에 프론트엔드 엔지니어로 합류하게됐다. 나를 시작으로 이번에 처음으로 온보딩 세션이 도입됐다고 한다. 굉장히 좋은 경험이었고, 내가 귀한 인재가 된 거처럼 대접받는 기분이었다. 구성원분들이 모두 친절하게 대해주셔서 큰 걱정없이 한 주를 보낼 수 있었다.

처음 경험하는 것들의 연속이라 스스로가 조금 움츠러들었었다. 내가 잘 할 수 있을까? 라는 생각때문이다. 다음주부턴 좀 더 자신감있게 행동하려고 한다. 가슴 한편에 무거운 불안감이 짓누르고 있긴 한데\("이제 나는 돈을 받으면서 프로그래밍을 하는 프로다"\), 너무 심해서 나를 좀먹는 정도가 아니면 어느정도는 긍정적인 감정이라고 생각한다.

"나는 신입이니 퍼포먼스를 당장 낼 수는 없지" 라고 생각하며 걱정을 어느정도 내려놓아야겠지만, 그래도 "퍼포먼스를 내야돼!" 라는 압박감은 스스로 어느정도 가져야한다... 이 조율을 어떻게 잘 하느냐가 관건이다.

### 타임라인

<table>
  <thead>
    <tr>
      <th style="text-align:left">&#xC6D4;</th>
      <th style="text-align:left">&#xD654;</th>
      <th style="text-align:left">&#xC218;</th>
      <th style="text-align:left">&#xBAA9;</th>
      <th style="text-align:left">&#xAE08;</th>
      <th style="text-align:left">&#xC8FC;&#xB9D0;</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td style="text-align:left">
        <p>- &#xC785;&#xC0AC;</p>
        <p>- &#xC628;&#xBCF4;&#xB529;</p>
      </td>
      <td style="text-align:left">
        <p>- &#xAC1C;&#xBC1C;&#xD658;&#xACBD; &#xC138;&#xD305;</p>
        <p>- &#xD504;&#xB85C;&#xB355;&#xD2B8; &#xC0B4;&#xD3B4;&#xBCF4;&#xAE30;</p>
      </td>
      <td style="text-align:left">- &#xD504;&#xB85C;&#xB355;&#xD2B8; &#xAD50;&#xC721;</td>
      <td style="text-align:left">
        <p>- &#xB9AC;&#xB355;&#xC2A4; &#xC0AC;&#xAC00; &#xACF5;&#xBD80;</p>
        <p>- &#xD504;&#xB85C;&#xB355;&#xD2B8; &#xAD50;&#xC721;</p>
      </td>
      <td style="text-align:left">- &#xD504;&#xB85C;&#xB355;&#xD2B8; &#xAD50;&#xC721;</td>
      <td style="text-align:left">
        <p>- Todo &#xC0AC;&#xC774;&#xB4DC; &#xD504;&#xB85C;&#xC81D;&#xD2B8;</p>
        <p>- &#xD734;&#xC2DD;</p>
      </td>
    </tr>
  </tbody>
</table>

#### 금주의 내 점수: 90점

### 잘한 점

* 아날로그 다이어리 작성을 시작했다. 평일에는 어느정도 시간 작성이 되는데, 주말엔 형편없었다. 아직 시간 기록까진 되는데 어떻게 시간을 분석하고, 개선해나가야할지 감이 잡히지 않는다. 우선 한달정도 기록만 꾸준히 해도 뭔가 패턴이 보이고, 낭비되는 시간이 보이겠지. 라고 믿고 우선 꾸준히 기록하는 걸 목표로 삼으려고 한다
* 하루 세 끼를 잘 챙겨먹게 됐다
* 피곤해서 그런지 몸이 자고 싶어하는 시간에 잘 잤다

### 아쉬운 점

* 운동을 거의 안했다. 안했다고 해야할지 못했다고 해야할지... 집에 오면 밥먹고, 씻고 거의 뻗어버려서 운동을 해야겠다는 생각조차 못했다. 의도적으로 해야하는데 어떤 방식으로 해야 좋을지 계속 고민중이다. 너무 진이 다 빠져버린 저녁에 운동을 해버리면 운동이 제대로 진행이 안돼서 어느 시간에 운동을 해야할 지도 고민중
* 독서에 손도 못댔지만 이는 내 몸이 적응해나가면 될거라 생각한다

### 개선할 점

* 다음 주부턴 재택근무를 주로 하게 되겠지만, 이번주 내내 출퇴근 시간에 멍하게 음악만 들었다. 집중하기는 어려운 환경이지만 음악대신에 조금 덜 집중이 필요한, 상대적으로 얕은 내용의 모르는 개념을 설명하는 유튜브 영상같은걸 들으면 어떨까 생각중이다. 코드 타이핑 하는 강의말고 개념 위주로...
* 운동, 독서는 차차 적응해나가기

### 키워드

* Flux
* **Redux-saga**
* **Promise**
* CI, AWS ECS, AWS ECR, Docker
* JS Decorator

### 읽은 것들

* [ES6 제너레이터](https://meetup.toast.com/posts/73)
* [리덕스 사가 한글 공식 문서](https://mskims.github.io/redux-saga-in-korean/)
* [리덕스 사가 테스트](https://nukeguys.github.io/dev/redux-saga-test/)
* [리덕스 사가 TOAST](https://meetup.toast.com/posts/136)
* [TypeScript에서 Immutable.js 쓰기](https://blog.martinwork.co.kr/typescript/2019/01/06/apply-immutablejs-with-typescript.html)

